[improve] 适配java21语言特性。